Mempool output wrap fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,6 +30,8 @@ pre {
   font-family: var(--monospace-fonts);
   background-color: #EEE;
   border-radius: 3px;
+  white-space: pre-wrap;
+  word-break: break-word;
 }
 pre:empty {
   display: none;
